--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vite": "^2.9.11"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.1.1",
+        "bootstrap-icons": "^1.8.3"
     }
 }
